test/errmsg/too-many-inits.c
// too-many-inits.c
// More initializers than the object can accept.

int arr2[2] = { 1, 2, 3 };

// EOF
